[project]
name = "reporepo"
version = "0.1.0"
description = "RepoRepo lets you repo GitHub repositories!"
readme = "README.md"
authors = [
    { name = "Gregory M. Kapfhammer", email = "gkapfham@allegheny.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "pygithub>=2.5.0",
    "rich>=13.9.4",
    "typer>=0.15.1",
]

[project.scripts]
reporepo = "reporepo.main:app"

[tool.ruff]
line-length = 79
lint.ignore = [
    "E501", # do not check line length
]
lint.select = [
    "E",    # pycodestyle
    "D",    # pydocstyle
    "I",    # isort
    "F",    # Pyflakes
    "PL",   # pylint
    "Q",    # flake8-quotes
    "RUF",  # ruff-specific
    "W",    # pycodestyle warnings
    "T201"  # flake8-print
]

[tool.isort]
include_trailing_comma = true
force_single_line = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
